[package]
name = "round_robin"
version = "1.6.0"
edition = "2021"

[[bin]]
name = "round_robin"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
